# internal/mcpauth/gen/token_introspection/endpoints.go
@@ -1,0 +1,55 @@
+// Code generated by goa, DO NOT EDIT.
+//
+// token_introspection endpoints
+//
+// Command:
+// $ goa gen goa.design/goa-ai/internal/mcpauth/design -o internal/mcpauth
+
+package tokenintrospection
+
+import (
+	"context"
+
+	goa "goa.design/goa/v3/pkg"
+	"goa.design/goa/v3/security"
+)
+
+// Endpoints wraps the "token_introspection" service endpoints.
+type Endpoints struct {
+	Read goa.Endpoint
+}
+
+// NewEndpoints wraps the methods of the "token_introspection" service with
+// endpoints.
+func NewEndpoints(s Service) *Endpoints {
+	// Casting service to Auther interface
+	a := s.(Auther)
+	return &Endpoints{
+		Read: NewReadEndpoint(s, a.BasicAuth),
+	}
+}
+
+// Use applies the given middleware to all the "token_introspection" service
+// endpoints.
+func (e *Endpoints) Use(m func(goa.Endpoint) goa.Endpoint) {
+	e.Read = m(e.Read)
+}
+
+// NewReadEndpoint returns an endpoint function that calls the method "read" of
+// service "token_introspection".
+func NewReadEndpoint(s Service, authBasicFn security.AuthBasicFunc) goa.Endpoint {
+	return func(ctx context.Context, req any) (any, error) {
+		p := req.(*ReadPayload)
+		var err error
+		sc := security.BasicScheme{
+			Name:           "introspection_credentials",
+			Scopes:         []string{},
+			RequiredScopes: []string{},
+		}
+		ctx, err = authBasicFn(ctx, string(p.Username), string(p.Password), &sc)
+		if err != nil {
+			return nil, err
+		}
+		return s.Read(ctx, p)
+	}
+}
